# caw

./: .gitignore  CLAUDE.md  README.md  TESTING.md  biome.json  package.json  plan.md  pnpm-lock.yaml  turbo.json
.claude/: settings.json
.github/workflows/: ci.yml
apps/cli/: README.md  package.json  tsconfig.json
apps/cli/src/: api-server.ts  daemon.ts  index.ts  server.ts
apps/cli/src/commands/: init.test.ts  (+8 more)
apps/desktop/: package.json  svelte.config.js  vite.config.ts
apps/desktop/scripts/: prepare-sidecar.ts
apps/desktop/src/: app.css
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/orchestrator/: package.json  tsconfig.json
apps/orchestrator/src/: index.ts
apps/tui/: README.md  package.json  tsconfig.json
apps/tui/src/: app.tsx  daemon.test.ts  daemon.ts  index.ts  server.ts  web-server.ts
apps/web-ui/: package.json  vite.config.ts
apps/web-ui/src/: app.css
docs/: agent-protocol.md  claude-md-integration.md  context-loading.md  data-model.md  desktop.md  error-handling.md  examples.md  future.md  implementation.md  mcp-tools.md  overview.md  project-structure.md  rest-api.md  schema.md  self-development.md  state-machines.md  tui.md  web-ui.md
examples/spawner-test/: TEST_PLAN.md  cleanup.sh  seed.ts
examples/spawner-test/example-project/: README.md
scripts/: compile-all.ts  seed-qa.ts  seed.ts  update-task.ts
tooling/tsconfig/: base.json  library.json  package.json
(+352 files in other folders)
