[package]
name = "caw-desktop"
version = "0.1.0"
description = "Caw Desktop App"
authors = ["caw"]
edition = "2021"

[lib]
name = "caw_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "macos-private-api"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["time"] }
window-vibrancy = "0.5"
tauri-plugin-window-state = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSButton", "NSControl", "NSView", "NSResponder"] }
objc2-foundation = { version = "0.3", features = ["NSGeometry"] }
